<resources>
    <string name="app_name">TetrisControl</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="logo">Logo</string>
    <string name="move_left">Move left</string>
    <string name="turn">Turn</string>
    <string name="move_right">Move right</string>
    <string name="score">Score</string>
    <string name="level">Level</string>
    <string name="move_down">Move down</string>
    <string name="auto">Auto</string>
</resources>