<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/start" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewScoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Score"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewScoreValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="123"
                android:textSize="36sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/logo"
            android:scaleType="centerInside"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_tetris" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLevelLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Level"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewLevelValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="1"
                android:textSize="36sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonLeft"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_arrow_back_24px"
            android:contentDescription="@string/move_left" />

        <ImageButton
            android:id="@+id/buttonTurn"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_refresh_24px"
            android:contentDescription="@string/turn"/>

        <ImageButton
            android:id="@+id/buttonRight"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_arrow_forward_24px"
            android:contentDescription="@string/move_right"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_textview_border">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:isScrollContainer="true"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:text="" />
    </ScrollView>

</LinearLayout>